# Quantum-GPS-Unified-Navigation-System

./: .gitignore  ARCHITECTURE.md  CITATION.cff  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  READY.py  VALIDATION_REPORT.py  chimera_v3_intelligence_as_process.html  main.py  pyproject.toml  requirements.txt  test_components.py
src/: __init__.py  chimera_system.py  gps_navigator_complete.py  gpu_eikonal_solver.py  landmark_correction.py  map_manager.py  navigator.py  optical_eikonal_solver.py  visualization.py
src/qgps/: __init__.py  cli.py  navigator.py  reference_eikonal.py  tile_manager.py
tests/: test_cli.py  test_eikonal_correctness.py  test_navigator.py  test_tile_manager.py
web_prototype/: index.html  main.js  shaders.js  style.css
